--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1779,11 +1779,23 @@ LeadScreen As screen:
                             LookUp(
                                 SHFPEstimates,
                                 Estimate = txtinptestimatenumber_1.Text 
-                               && 'Lead Generator Id' = VarSelectedLead.TechnicianID
+                               //&& 'Lead Generator Id' = VarSelectedLead.TechnicianID
                             )
                         ),
                         Set(
                             FlagEstimateNumberFound,
+                            true
+                        );
+                        If(
+                        !IsBlank(
+                            LookUp(
+                                SHFPEstimates,
+                                Estimate = txtinptestimatenumber_1.Text 
+                               && 'Lead Generator Id' = VarSelectedLead.TechnicianID
+                            )
+                        ),
+                        Set(
+                            FlagEstimateNumberWithTechIdFound,
                             true
                         );
                         Set(
@@ -1801,19 +1813,36 @@ LeadScreen As screen:
                                 'Created On'
                             )
                         ),
-                       // Notify("Estimate number not found in the FP Estimate file or Wrong Estimate number for this lead Technician is entered.");
+                        Notify("Estimate number not found in the FP Estimate file for this lead Technician is entered.");
                       // Notify("Estimate number of this lead technician is not found in FP Estimate file, Estimate number saved successfully.We will update Incentives Details when FPEstimate file is processed");
-                       
+                        );
+                        ,
                         Set(
                             FlagEstimateNumberFound,
                             false
                         );
+                
+                ); //estimate number found if close
+                );//estimatenumber entered if close
+                
+                If(FlagEstimateNumberFound=false,
+                //If Estimate number is not found in FP Estimate file then we are storing estimate nummber only.
+                 UpdateIf(
+                        LeadInformations,
+                        ID = VarSelectedLead.ID,
+                        {
+                            LeadEstimateNumber: txtinptestimatenumber_1.Text
+                        }
                     );
-                );  
+                    Set(VarPopUpEstimateNumberSubmitted,true);
+                       Set(VarPopUpEstimateNumberSubmittedmsg,"Estimate number of this lead technician is not found in FP Estimate file, Estimate number saved successfully.We will update Incentives Details when FPEstimate file is processed");
+                );
+                
+                
                 
                 //here checking FlagEstimateNumberFound is true then update estimate number,leadprice,leadincentive
                 If(
-                    FlagEstimateNumberFound = true,
+                    FlagEstimateNumberWithTechIdFound = true,
                     If(IsBlank(
                             LookUp(
                                 SHFPEstimates,
@@ -1898,17 +1927,8 @@ LeadScreen As screen:
                      Set(VarNavigateDashboardScreen,true);
                     
                     //Navigate(DashboardScreen);
-                    ,
-                    //If Estimate number is not found in FP Estimate file then we are storing estimate nummber only.
-                 UpdateIf(
-                        LeadInformations,
-                        ID = VarSelectedLead.ID,
-                        {
-                            LeadEstimateNumber: txtinptestimatenumber_1.Text
-                        }
-                    );
-                    Set(VarPopUpEstimateNumberSubmitted,true);
-                       Set(VarPopUpEstimateNumberSubmittedmsg,"Estimate number of this lead technician is not found in FP Estimate file, Estimate number saved successfully.We will update Incentives Details when FPEstimate file is processed");
+                    
+                    
                 );
             PressedBorderColor: =RGBA(1, 43, 1, 0)
             PressedFill: =Self.Fill
