--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -137,6 +137,7 @@
     "ImageUploadScreen",
     "LeadSummaryScreen",
     "SubmittedLeadScreen",
+    "SubmittedLeadScreen_1",
     "ViewDetailsScreen",
     "ChatScreen",
     "Screen1"
