--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1832,81 +1832,128 @@ LeadSummaryScreen As screen:
                     Fill: =RGBA(255, 0, 0, 1)
                     HoverFill: =Color.Red
                     OnSelect: |
-                        =If(IsBlank(IntxtUnitCountLSS.Text) ||IsBlank(IntxtUnitDescriptionLSS.Text)|| IsBlank(CboxScopeLSS)  || IsBlank(IntxtEstimatedHoursLSS.Text) ||IsBlank(IntxtNotesLSS.Text) ||If(CboxCCLSS.Value=true,IsBlank(IntxtCustomerNameLSS) || IsBlank(lblContactNumber_1) ||IsBlank(lblContactES_1)) || If(cboxAELSS.Value=true,IsBlank(IntxtTotalEstimatedExpenseLSS))||If(cboxTravelRequiredLSS.Value=true,IsBlank(intxtTotalEstimatedHoursofTravelLSS)) || Len(IntxtContactNumberES_1)<>10,
-                        Set(VarErrorPopup,true),
-                        Set(VarNotificationloding,true);
-                        Set(VarNotification,true);
-                        Set(VarLeadInformationID,GUID());
-                        Patch(
-                            LeadInformations,
-                            Defaults(LeadInformations),
-                            {
-                                ID: VarLeadInformationID,
-                                'ContractNumber ': IntxtContractNumerLSS.Text,
-                                'BuildingName ': IntxtBuildingNameLSS.Text,
-                                'ZipCode ': IntxtZipcodeLSS.Text,
-                                Address: IntxtAddressLSS.Text,
-                                NumberofUnits: Value(IntxtUnitCountLSS.Text),
-                                UnitDescription: IntxtUnitDescriptionLSS.Text,
-                                PrimaryScopeofWorkLID: LookUp(
-                                    GCPrimaryScopeofWorks,
-                                    ID =CboxScopeLSS.Selected.ID        
-                         ),
-                                SecondaryScopeofWorkLID: LookUp(
-                                    GCSecondaryScopeofWorks,
-                                    ID = CboxScopeofWorkLSS.Selected.ID
-                                ),
-                                CustomScopeofWork: IntxtManuallyScopeofWorkLSS.Text,
-                                'EstimatedHours ': IntxtEstimatedHoursLSS.Text,
-                                Notes: IntxtNotesLSS.Text,
-                                //Lead_Image:Image2.Image,
-                                IsUnitDown: CboxUDLSS.Value,
-                                AdditionalExpensesRequired: cboxAELSS.Value,
-                                TravelRequired: cboxTravelRequiredLSS.Value,
-                                CommunicatedToCustomer: CboxCCLSS.Value,
-                                'CustomerName ':lblCustomerNameLSS.Text,
-                                'CustomerContact ':lblContactNumber_1.Text,
-                                TotalEstimatedExpense: IntxtTotalEstimatedExpenseLSS.Text,
-                                TotalEstimatedHoursofTravel:intxtTotalEstimatedHoursofTravelLSS.Text,
-                                LeadStatus: "Submitted",
-                                LeadDate:Now(),
-                                StatusDate:Now(),
-                                Email: User().Email,
-                                MechanicName: User().FullName,
-                                TechnicianID:VarTechnicianID.'Personnel No',
-                                Area:VarTechnicianID.Area,
-                                Territory:VarTechnicianID.Territory,
-                                District:VarTechnicianID.District
-                            }
-                        );
-                        ForAll(
-                            glryImageLSS.AllItems As i,
+                        =If(
+                            IsBlank(IntxtUnitCountLSS.Text) || IsBlank(IntxtUnitDescriptionLSS.Text) || IsBlank(CboxScopeLSS) || IsBlank(IntxtEstimatedHoursLSS.Text) || IsBlank(IntxtNotesLSS.Text) || If(
+                                CboxCCLSS.Value = true,
+                                IsBlank(IntxtCustomerNameLSS) || IsBlank(lblContactNumber_1) || IsBlank(lblContactES_1)
+                            ) || If(
+                                cboxAELSS.Value = true,
+                                IsBlank(IntxtTotalEstimatedExpenseLSS)
+                            ) || If(
+                                cboxTravelRequiredLSS.Value = true,
+                                IsBlank(intxtTotalEstimatedHoursofTravelLSS)
+                            ) || Len(IntxtContactNumberES_1) <> 10,
+                            Set(
+                                VarErrorPopup,
+                                true
+                            ),
+                            Set(
+                                VarNotificationloding,
+                                true
+                            );
+                            Set(
+                                VarNotification,
+                                true
+                            );
+                            Set(
+                                VarLeadInformationID,
+                                GUID()
+                            );
                             Patch(
-                                LeadImages,
+                                LeadInformations,
+                                Defaults(LeadInformations),
                                 {
-                                    ID:GUID(),
-                                    Images:i.Image,
-                                    LeadInformationLID:LookUp(LeadInformations,ID=Text(VarLeadInformationID))
-                        
+                                    ID: VarLeadInformationID,
+                                    'ContractNumber ': IntxtContractNumerLSS.Text,
+                                    'BuildingName ': IntxtBuildingNameLSS.Text,
+                                    'ZipCode ': IntxtZipcodeLSS.Text,
+                                    Address: IntxtAddressLSS.Text,
+                                    NumberofUnits: Value(IntxtUnitCountLSS.Text),
+                                    UnitDescription: IntxtUnitDescriptionLSS.Text,
+                                    PrimaryScopeofWorkLID: LookUp(
+                                        GCPrimaryScopeofWorks,
+                                        ID = CboxScopeLSS.Selected.ID
+                                    ),
+                                    SecondaryScopeofWorkLID: LookUp(
+                                        GCSecondaryScopeofWorks,
+                                        ID = CboxScopeofWorkLSS.Selected.ID
+                                    ),
+                                    CustomScopeofWork: IntxtManuallyScopeofWorkLSS.Text,
+                                    'EstimatedHours ': IntxtEstimatedHoursLSS.Text,
+                                    Notes: IntxtNotesLSS.Text,
+                                    //Lead_Image:Image2.Image,
+                                    IsUnitDown: CboxUDLSS.Value,
+                                    AdditionalExpensesRequired: cboxAELSS.Value,
+                                    TravelRequired: cboxTravelRequiredLSS.Value,
+                                    CommunicatedToCustomer: CboxCCLSS.Value,
+                                    'CustomerName ': lblCustomerNameLSS.Text,
+                                    'CustomerContact ': lblContactNumber_1.Text,
+                                    TotalEstimatedExpense: IntxtTotalEstimatedExpenseLSS.Text,
+                                    TotalEstimatedHoursofTravel: intxtTotalEstimatedHoursofTravelLSS.Text,
+                                    LeadStatus: "Submitted",
+                                    LeadDate: Now(),
+                                    StatusDate: Now(),
+                                    Email: User().Email,
+                                    MechanicName: User().FullName,
+                                    TechnicianID: VarTechnicianID.'Personnel No',
+                                    Area: VarTechnicianID.Area,
+                                    Territory: VarTechnicianID.Territory,
+                                    District: VarTechnicianID.District
                                 }
+                            );
+                            ForAll(
+                                glryImageLSS.AllItems As i,
+                                Patch(
+                                    LeadImages,
+                                    {
+                                        ID: GUID(),
+                                        Images: i.Image,
+                                        LeadInformationLID: LookUp(
+                                            LeadInformations,
+                                            ID = Text(VarLeadInformationID)
+                                        )
+                                    }
+                                )
+                            );
+                          /*  If(
+                                CountRows(
+                                    Filter(
+                                        TotalIncentives,
+                                        TechnicianID = VarTechnicianID.'Personnel No' && Year = Text(Year(Now()))
+                                    )
+                                ) < 1,
+                                Patch(
+                                    TotalIncentives,
+                                    Defaults(TotalIncentives),
+                                    {
+                                        ID: GUID(),
+                                        TechnicianID: VarTechnicianID.'Personnel No',
+                                        TotalproposedIncentives: 0.00,
+                                        TotalProposedLead: 0,
+                                        TotalSoldIncentives: 0.00,
+                                        TotalSoldLead: 0,
+                                        Year: Year(Now()),
+                                        LeadYear: Year(Now())
+                                    }
+                                )
+                            );*/
+                            Set(
+                                VarNotificationloding,
+                                false
+                            );
+                            Set(
+                                VarNotificationSuccess,
+                                true
                             )
                         );
-                        If(CountRows(Filter(TotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Year=Text(Year(Now()))))<1,
-                        Patch(TotalIncentives,
-                        Defaults(TotalIncentives),{
-                            ID:GUID(),
-                            TechnicianID:VarTechnicianID.'Personnel No',
-                            TotalproposedIncentives:0.00,
-                            TotalProposedLead:0,
-                            TotalSoldIncentives:0.00,
-                            TotalSoldLead:0,
-                            Year:Year(Now()),
-                            LeadYear:Year(Now())
-                        }));
-                        Set(VarNotificationloding,false);
-                        Set(VarNotificationSuccess,true));
-                        Set(VarLeadTrackingNumber,LookUp(LeadInformations,ID=Text(VarLeadInformationID),LeadTrackingNumber))
-                        
+                        Set(
+                            VarLeadTrackingNumber,
+                            LookUp(
+                                LeadInformations,
+                                ID = Text(VarLeadInformationID),
+                                LeadTrackingNumber
+                            )
+                        )
                         /*Notify(
                             "Form has been submitted succuessfully.",
                             NotificationType.Success
